--- a/src/css/index.css
+++ b/src/css/index.css
@@ -66,8 +66,6 @@ nav span {
     background-color: #ffffff;
 }
 
-
-
 /* Content */
 .content{
     display: flex;
@@ -82,27 +80,37 @@ nav span {
     justify-content: flex-start;
 }
 
-.container-1 img{
+.container-1 .img-banner{
     width: 60%;
-    margin: 32px 24px;
+    margin: 32px 0 32px 24px;
+    padding-right: 24px;
+}
+
+.img-banner img{
+    width: 100%;
 }
 
 .container-1-context {
     display: flex;
     flex-direction: column;
-    row-gap: 28px;
-    width:30%;
+    row-gap: 12px;
+    width:40%;
 }
 
 .container-1-context h1{
     font-size: 48px;
+    width:75%;
+}
+
+.container-1-context h2{
+    width:75%;
 }
 
 .container-1-context a{
     display: flex;
     justify-content: center;
     align-items: center;
-    width:100%;
+    width:75%;
     padding: 8px 0;
     color: #fff;
     background-color: #4a4a4a;
@@ -125,13 +133,13 @@ nav span {
 
 .container-2-left {
     width: 60%;
-    padding: 0 24px 0 24px;
-    border-right: 1px solid #d8d8d8;
+    padding: 0 0 0 24px;
+    margin-right: 24px;
 }
 
 .container-2-left img {
     width: 100%;
-    margin: 32px 0;
+    margin: 32px 0 32px 0;
 }
 
 .container-2-left h1 {
@@ -148,6 +156,7 @@ nav span {
     width: 40%;
     display: flex;
     flex-direction: column;
+    border-left: 1px solid #d8d8d8;
 }
 
 .card {
@@ -260,12 +269,17 @@ nav span {
 .container-4-left {
     width: 60%;
     flex-direction: column;
-    margin: 0 24px 24px 32px;
+    margin: 0 0 24px 32px;
+    padding-right: 24px;
 }
 
-.container-4-left video{
+.Video{
     width: 100%;
     margin-bottom: 24px;
+}
+
+.Video video{
+    width: 100%;
 }
 
 .container-4-left-context {
