--- a/src/css/index.css
+++ b/src/css/index.css
@@ -156,8 +156,9 @@ nav span {
     width: 40%;
     display: flex;
     flex-direction: column;
-    border-left: 1px solid #d8d8d8;
+    
 }
+
 
 .card {
     display: flex;
@@ -346,4 +347,8 @@ nav span {
 
 a:hover{
     text-decoration: underline;
+}
+
+.b-l-1{
+    border-left: 1px solid #d8d8d8;
 }
